package stars;

public interface Database {
	public abstract void loadInformation();
	public abstract void saveInformation();
}
