public class RegisteredCourses {
}
