package stars;

public interface Selectable {
    
    /**
     * Retrieves student identification number
     * @return String This formatted string containing information of the Selectable to be printed
     */
    public String print();
}
